external-access/external-access-argocd/base/ingressroute.yaml
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: argocd
spec:
  entryPoints:
    - web
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: argocd-tls
  annotations:
    dashboard.zippelf.com/scrape: "true"
    dashboard.zippelf.com/logo: "https://github.com/argoproj/argo-cd/raw/master/ui/src/assets/images/argo.png"
    dashboard.zippelf.com/display-name: "Argo CD"
    dashboard.zippelf.com/docs: "https://argoproj.github.io/argo-cd/"
spec:
  entryPoints:
    - websecure
  tls:
    secretName: tls-argocd-ingress
